--- a/css/stylus/style.styl
+++ b/css/stylus/style.styl
@@ -1,1 +1,10 @@
+color-brand = #F15E4A
+color-text = #111
+color-links = #999
+
 @import "nib"
+@import "reset"
+@import "layout"
+@import "fonts"
+@import "typography"
+@import "colors"
