Fix @font-face file paths

--- a/css/stylus/style.styl
+++ b/css/stylus/style.styl
@@ -14,22 +14,22 @@ global-reset()
 
 @font-face
     font-family "Adelle"
-    src url("../adelle-regular-webfont.eot")
-    src url("../adelle-regular-webfont.eot?#iefix") format("embedded-opentype"),
-        url("../adelle-regular-webfont.woff") format("woff"),
-        url("../adelle-regular-webfont.ttf") format("truetype"),
-        url("../adelle-regular-webfont.svg#Adelle") format("svg")
+    src url("../fonts/adelle-regular-webfont.eot")
+    src url("../fonts/adelle-regular-webfont.eot?#iefix") format("embedded-opentype"),
+        url("../fonts/adelle-regular-webfont.woff") format("woff"),
+        url("../fonts/adelle-regular-webfont.ttf") format("truetype"),
+        url("../fonts/adelle-regular-webfont.svg#Adelle") format("svg")
     font-weight normal
     font-style normal
 
 
 @font-face
     font-family "Adelle"
-    src url("../adelle-light-webfont.eot")
-    src url("../adelle-light-webfont.eot?#iefix") format("embedded-opentype"),
-        url("../adelle-light-webfont.woff") format("woff"),
-        url("../adelle-light-webfont.ttf") format("truetype"),
-        url("../adelle-light-webfont.svg#Adelle") format("svg")
+    src url("../fonts/adelle-light-webfont.eot")
+    src url("../fonts/adelle-light-webfont.eot?#iefix") format("embedded-opentype"),
+        url("../fonts/adelle-light-webfont.woff") format("woff"),
+        url("../fonts/adelle-light-webfont.ttf") format("truetype"),
+        url("../fonts/adelle-light-webfont.svg#Adelle") format("svg")
     font-weight 300
     font-style normal
 
