--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
   line-height: 1.8;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
   color: var(--color-secondary);
   background-color: var(--color-background);
 }
