--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   line-height: 1.8;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;  /* Prevent font scaling in landscape */
   color: var(--color-secondary);
   background-color: var(--color-background);
 }
