--- a/styles.scss
+++ b/styles.scss
@@ -3,8 +3,8 @@
 /* Variables */
 
 :root {
-  --color-accent: #f03e3e;
-  --color-primary: rgba(0, 0, 0, 0.8);
+  --color-accent: #ff0000;
+  --color-primary: #000000;
   --color-secondary: rgba(0, 0, 0, 0.5);
   --color-border: rgba(0, 0, 0, 0.1);
   --color-background: #ffffff;
@@ -101,7 +101,7 @@ a {
 
 .about-link {
   padding: 0.125em 0;
-  border-bottom: 1px solid var(--color-border);
+  border-bottom: 1px solid currentColor;
   transition: color var(--transition-duration);
 }
 
