--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>{{ page.title }}</title>
-  <meta name="description" content="{{ page.description }}" >
+  <meta name="description" content="{{ page.description }}">
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:description" content="{{ page.description }}">
   <meta name="twitter:card" content="summary">
 
+  <link href="https://rsms.me/interface/interface.css" rel="stylesheet">
   <link href="https://unpkg.com/tachyons/css/tachyons.min.css" rel="stylesheet">
   <style>
+    .interface {
+      font-family: Interface, sans-serif;
+    }
+
     .color-animate,
     .color-animate:hover,
     .color-animate:focus {
-      transition: color .15s;
+      transition: color 150ms;
     }
   </style>
 
-  {% if site.google_analytics and jekyll.environment == 'production' %}
-    {% include analytics.html %}
-  {% endif %}
+  {% if site.google_analytics and jekyll.environment == 'production' %} {% include analytics.html %} {% endif %}
 </head>
-<body class="sans-serif black-60">
+
+<body class="interface black-60">
   {{ content }}
 </body>
+
 </html>
