Remove target="_blank"

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <ul class="flex flex-column flex-row-l mv0 pv4 pv5-ns pl0 list f5">
   {% for link in site.data.links %}
     <li class="mr4-l pv3">
-      <a class="no-underline color-inherit color-animate hover-dark-red" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
+      <a class="no-underline color-inherit color-animate hover-dark-red" href="{{ link.url }}">{{ link.name }}</a>
     </li>
   {% endfor %}
 </ul>
